syntax = "proto3";
package freight_quoter;

message Item {
  uint64 quantity = 1;
  float price = 2;
  uint64 width = 3;
  uint64 height = 4;
  uint64 length = 5;
}

message ToPackage {
  repeated Item items = 1;
}

message Package {
  uint64 quantity = 1;
  float price = 2;
  float volume = 3;
}

message Quotation {
  Package package = 1;
  string zipCode = 2;
}

message Delivery {
  uint64 time = 1;
  float price = 2;
}

service FreightQuoter {
  rpc MountPackage(ToPackage) returns (Package) {}
  rpc Quote(Quotation) returns (Delivery) {}
}